--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,7 @@
 <div class="settings">
 	<h4>Twitter Home</h4>
 
-
+	<nav><a ui-sref="home.timeline" ui-sref-active="active">Timeline</a> - <a ui-sref="home.notifications" ui-sref-active="active">Notifications</a> - <a ui-sref="home.user" ui-sref-active="active">User</a></nav>
+	
+	<div ui-view />
 </div>
